After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782566 - event-widget: fix memory leak
event-widget: fix memory leak
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-12 15:37 UTC by Mohammed Sadiq
Modified: 2017-05-15 20:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
event-widget: fix memory leak (646 bytes, patch)
2017-05-12 15:37 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-05-12 15:37:34 UTC
.
Comment 1 Mohammed Sadiq 2017-05-12 15:37:54 UTC
Created attachment 351736 [details] [review]
event-widget: fix memory leak
Comment 2 Georges Basile Stavracas Neto 2017-05-15 20:28:15 UTC
Review of attachment 351736 [details] [review]:

lgtm
Comment 3 Georges Basile Stavracas Neto 2017-05-15 20:33:33 UTC
Attachment 351736 [details] pushed as be731fc - event-widget: fix memory leak